--- a/help.html
+++ b/help.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Help / FAQ | My GitHub Page</title>
+  <title>Help| My GitHub Page</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <nav>
     <a href="index.html">Home</a>
     <a href="download.html">Download</a>
-    <a href="help.html">Help / FAQ</a>
+    <a href="help.html">Help</a>
   </nav>
 
   <main>
