--- a/download.html
+++ b/download.html
@@ -10,7 +10,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="download.html">Download</a>
-    <a href="help.html">Help / FAQ</a>
+    <a href="help.html">Help</a>
   </nav>
 
   <main>
