--- a/help.html
+++ b/help.html
@@ -14,7 +14,7 @@
   </nav>
 
   <main>
-    <h1>Help / FAQ</h1>
+    <h1>Help</h1>
     <h2>How do I use this site?</h2>
     <p>Use the navigation links to visit each page.</p>
 
